// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitComponent Renders submit view with options 1`] = `
<div
  className="Submit-container"
>
  <div>
    Hit the submit button when ready or customize options.
  </div>
  <div
    className="Submit-status-container"
  >
    <div
      className="Submit-analysis-overview"
    >
      <div>
        Current settings:
      </div>
    </div>
    <div
      className="Submit-button-container"
    >
      <Button
        className="success-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        prefixCls="ant-btn"
        type="submit"
      >
        Submit
      </Button>
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="left"
        prefixCls="ant-tooltip"
        title="Reset options"
        transitionName="zoom-big-fast"
      >
        <Button
          className="warning-button"
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          type="button"
        >
          Reset
        </Button>
      </Tooltip>
      <Button
        className="Submit-options-button"
        ghost={false}
        loading={false}
        onClick={[Function]}
        prefixCls="ant-btn"
        type="primary"
      >
        <FontAwesomeIcon$1
          border={false}
          className="Submit-hide-options-icon"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f146",
                "M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z",
              ],
              "iconName": "minus-square",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size="sm"
          spin={false}
          symbol={false}
          transform={null}
        />
         Options
      </Button>
    </div>
  </div>
</div>
`;

exports[`SubmitComponent Renders submit view without options 1`] = `
<div
  className="Submit-container"
>
  <div>
    Hit the submit button when ready or customize options.
  </div>
  <div
    className="Submit-status-container"
  >
    <div
      className="Submit-analysis-overview"
    >
      <div>
        Current settings:
      </div>
    </div>
    <div
      className="Submit-button-container"
    >
      <Button
        className="success-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        prefixCls="ant-btn"
        type="submit"
      >
        Submit
      </Button>
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="left"
        prefixCls="ant-tooltip"
        title="Reset options"
        transitionName="zoom-big-fast"
      >
        <Button
          className="warning-button"
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          type="button"
        >
          Reset
        </Button>
      </Tooltip>
      <Button
        className="Submit-options-button"
        ghost={false}
        loading={false}
        onClick={[Function]}
        prefixCls="ant-btn"
        type="primary"
      >
        <FontAwesomeIcon$1
          border={false}
          className="Submit-show-options-icon"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f0fe",
                "M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z",
              ],
              "iconName": "plus-square",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size="sm"
          spin={false}
          symbol={false}
          transform={null}
        />
         Options
      </Button>
    </div>
  </div>
</div>
`;
